[gd_scene load_steps=5 format=3 uid="uid://beiewh6gcnyn4"]

[ext_resource type="Script" path="res://gameover/gameover.gd" id="1_6pyxe"]
[ext_resource type="Theme" uid="uid://cdnxxxhxeteub" path="res://Default2.tres" id="2_ohpye"]
[ext_resource type="AudioStream" uid="uid://b0j7g8feqws4h" path="res://audio/Hover_sound_effect.mp3" id="3_y0glh"]
[ext_resource type="AudioStream" uid="uid://b6g2wyihknjsn" path="res://audio/button_sound_effect.mp3" id="4_x85s0"]

[node name="Gameover" type="CanvasLayer"]
script = ExtResource("1_6pyxe")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.103744, 0.103744, 0.103744, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 505.0
offset_top = 218.0
offset_right = 752.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "GAME OVER"

[node name="Restart" type="Button" parent="ColorRect"]
offset_left = 596.0
offset_top = 305.0
offset_right = 701.0
offset_bottom = 347.0
theme = ExtResource("2_ohpye")
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="Quit" type="Button" parent="ColorRect"]
offset_left = 617.0
offset_top = 385.0
offset_right = 680.0
offset_bottom = 427.0
theme = ExtResource("2_ohpye")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_y0glh")

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_x85s0")

[connection signal="mouse_entered" from="ColorRect/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="ColorRect/Restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="ColorRect/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="ColorRect/Quit" to="." method="_on_quit_pressed"]
